# gsm_server

./: Cargo.toml  Dockerfile  fly.toml
src/: app_state.rs  config.rs  main.rs
src/controllers/: auth.rs  mod.rs  profile.rs  util.rs
src/middlewares/: jwt_auth.rs
src/migrations/: 000001_down.sql  000001_up.sql
src/models/: mod.rs  profile.rs  user.rs  util.rs
src/utils/: app_error.rs  mod.rs  password.rs
src/views/: profile.rs  user.rs
